* Use between numbers in filter box
* Fill 'to' with 'from' value on filter box
* Add tab domain in URL
* Use properties
* Allow sao classes to use javascript properties
* Improve layout of CSV import/export
* Add support for height and width on notebook
* Use tab key for tab navigation
* Use record and field properties of widget instead of method arguments
* Reduce offset when no search result
* Add support for plugins
* Add support for expand, height and width attributes
* Add drag & drop support on attachment button

Version 5.0.0 - 2018-10-01
* Bug fixes (see mercurial logs for details)
* Prevent similar tab
* Remove dialog for input file
* Use dropdown for attachment
* Manage icons in input
* Support RTL language direction
* Apply factor on domain parser
* Use tab name in CSV Export/Import
* Add bus management
* Load custom CSS and Javascript
* New icons
* Support timestamp field
* Validate dictionary items
* Add (i)like support to domain inversion
* Improve loading strategy by using views
* Add support of width attribute on tree view
* Use non conflicting keyboard shortcuts
* Use the context to get the suffix of window name
* Call on_change methods after setting default dtstart on calendar view
* Allow to open in new tab Many2One and Reference with CTRL key
* Store session in browser storage
* Increase the space available for tab list
* Allow to toggle menu on large screen
* Manage URL and history

Version 4.8.0 - 2018-04-23
* Bug fixes (see mercurial logs for details)
* Manage active field on search widget
* Add position and length on list view
* Reset record to its original state when discarding the popup window
* Add support of expand attribute on group tag
* Add the context model name in the screen context
* Add sum of records on list view
* Add shortcuts to Date and DateTime widgets
* Use limit to expand tree
* Use spellcheck and lang attributes for textbox widget
* Support icon on page
* Add keyword attribute to button tag